Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45115

TextEdit.textDocument - "depends on non-NOTIFYable properties" warning

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • None
    • 5.3.2, 5.4.0
    • None
    • 7bc33d853825b125f1b05140afcd85c03cad84bf

    Description

      TextEdit.textDocument property is not described as CONSTANT and has no NOTIFY, so there is "depends on non-NOTIFYable properties" warning when it used in QML binding.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kahautam Kari Hautamäki
            IvanKoz Ivan Kozlov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes