Add CONSTANT to Q_PROPERTY textDocument

Add CONSTANT keyword to Q_PROPERTY textDocument to remove warning "depends
on non-NOTIFYable properties".

Task-number: QTBUG-45115
Change-Id: I090870765e8b32bc1438d21d9c1b7ef942c043b5
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>